fix: fixed code warnings